|
Quick Lists
|
|
Bug ID:
|
6889656
|
|
Votes
|
0
|
|
Synopsis
|
assert(lo_lrg->lo_degree() || !lo_no_simplify,"Live range was lo-degree before coalesce; should simp
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs17(b04),
7(b75) (Bug ID:2184788)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6875959
|
|
Submit Date
|
08-OCT-2009
|
|
Description
|
Regression after my fix for 6875959.
java -cp /net/sqenfs-1.sfbay/export1/comp/vm/testbase/sqe/vm/6/build/latest/vm/bin/classes -Xcomp -XX:CICompilerCount=1 -XX:+PrintCompilation Limit
VM option 'CICompilerCount=1'
VM option '+PrintCompilation'
...
952 b sun.util.calendar.JulianCalendar::getCalendarDateFromFixedDate (247 bytes)
953 b sun.util.calendar.JulianCalendar::getFixedDate (225 bytes)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/chaitin.cpp:1034
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt/P2/B/194848.kvn/source/src/share/vm/opto/chaitin.cpp:1034), pid=27527, tid=14
# Error: assert(lo_lrg->lo_degree() || !lo_no_simplify,"Live range was lo-degree before coalesce; should simplify")
#
# JRE version: 6.0
# Java VM: OpenJDK 64-Bit Server VM (17.0-b01-2009-10-07-194848.kvn.6875959-fastdebug compiled mode solaris-amd64 compressed oops)
# An error report file with more information is saved as:
# /export/home/kvn/build/6889300/hs_err_pid27527.log
#
Posted Date : 2009-10-08 16:44:54.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/5f29a958a545
Posted Date : 2009-10-14 06:09:08.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |