6889656: assert(lo_lrg->lo_degree() || !lo_no_simplify,"Live range was lo-degree before coalesce

Restore the original code: uint i = _hi_degree.

Reviewed-by: never, jrose